# neural_clbf

./: .gitignore  LICENSE  README.md  TODO.txt  code_check.sh  gurobi.env  matlab_instructions.md  matlab_interface.m  matlab_interface.py  requirements.txt  run_train.sh  setup.cfg  setup.py
.github/workflows/: ci-testing.yml
integration/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
integration/integration/: CMakeLists.txt  package.xml
neural_clbf/controllers/: __init__.py  cbf_controller.py  clbf_ddpg_controller.py  clf_controller.py  controller.py  controller_utils.py  generic_controller.py  multiagent_controller.py  neural_bb_lbf_controller.py  neural_bf_controller.py  neural_cbf_controller.py  neural_clbf_controller.py  neural_qp_rclbf_controller.py  neural_rclbf_controller.py  neural_sid_clbf_controller.py  obs_mpc_controller.py  utils.py
neural_clbf/datamodules/: __init__.py  episodic_datamodule.py
neural_clbf/evaluation/: eval_autorally.py  eval_inverted_pendulum.py  eval_linear_satellite.py  eval_multiagent.py  eval_nonlinear_satellite.py  eval_single_track_car.py  eval_turtlebot.py  eval_turtlebot2d.py  scenes.py  turtlebot_codebase_connector_new.py
neural_clbf/experiments/: __init__.py  bf_contour_experiment.py  car_s_curve_experiment.py  clbf_contour_experiment.py  clf_contour_experiment.py  clf_verification_experiment.py  experiment.py  experiment_suite.py  lf_contour_experiment.py  multiagent_experiment.py  obs_bf_verification_experiment.py  real_time_series_experiment.py  rollout_norm_experiment.py  rollout_state_space_experiment.py  rollout_success_rate_experiment.py  rollout_time_series_experiment.py  sim_inverted_pendulum_controller.py  sim_kinematic_car_controller.py  sim_quad3d_rmpc.py  sim_single_track_car_controller.py  sim_single_track_car_rmpc.py  test_kinematic_car_controller.py  (+12 more)
sim_traces/: kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-1890.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-339.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-3626.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-501.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-5761.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-6493.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-6641.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-8374.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-8438.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-randomized-8540.csv  kscar_rCLBF-QP_dt=0-01_omega_ref=1-5-sine.csv  kscar_rmpc_dt=0-1_omega_ref=1-5-randomized-6442.csv  kscar_rmpc_dt=0-1_omega_ref=1-5-sine.csv  kscar_rmpc_dt=0-25_omega_ref=1-5-randomized-1865.csv  kscar_rmpc_dt=0-25_omega_ref=1-5-sine.csv  kscar_rmpc_dt=0-2_omega_ref=1-5-randomized-6637.csv  kscar_rmpc_dt=0-2_omega_ref=1-5-sine.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-47.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-528888888888889.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-5877777777777777.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-6466666666666667.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-7055555555555555.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-7644444444444445.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-8233333333333333.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-8822222222222222.csv  neural_lander_rCLBF-QP_dt=0-001_m=1-941111111111111.csv  neural_lander_rCLBF-QP_dt=0-001_m=2-0.csv  neural_lander_rmpc_dt=0-1_m=1-47.csv  neural_lander_rmpc_dt=0-1_m=2-0.csv  neural_lander_rmpc_dt=0-2.csv  neural_lander_rmpc_dt=0-25.csv  neural_lander_rmpc_dt=0-25_m=2-0.csv  neural_lander_rmpc_dt=0-2_m=2-0.csv  quad2d_obs_rCLBF-QP_dt=0-001_m=1-05_I=0-0105.csv  quad2d_obs_rCLBF-QP_dt=0-001_m=1-0_I=0-01.csv  quad2d_obs_rmpc_dt=0-1_m=1-05_I=0-0105.csv  quad2d_obs_rmpc_dt=0-1_m=1-0_I=0-01.csv  quad2d_obs_rmpc_dt=0-25_m=1-05_I=0-0105.csv  quad2d_obs_rmpc_dt=0-25_m=1-0_I=0-01.csv  quad3d_rCLBF-QP_dt=0-001_m=1-0.csv  (+36 more)
tests/: test_base.py
turtlebot_scripts/: battery_status.py  message_creator.py  odometry_status.py  run_turtlebot_node.py  send_command.py
(+237 files in other folders)
