[mypy]

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-casadi.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-qpth.*]
ignore_missing_imports = True

[mypy-gurobipy.*]
ignore_missing_imports = True

[mypy-cvxpy.*]
ignore_missing_imports = True

[mypy-cvxpylayers.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-celluloid.*]
ignore_missing_imports = True


[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict-markers
    --doctest-modules
    --durations=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[tool:brunette]
exclude = matlab_export*

[flake8]
max-line-length = 88
exclude = .tox,*.egg,build,temp,matlab_export*
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    W504  # Line break occurred after a binary operator
    W605  # Invalid escape sequence 'x'
    E203  # whitespace before : (black puts this here)
    W503  # line break before binary operator (black does this)

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown
